[package]
name = "general_conference"
version = "0.1.0"
authors = ["neallred <neallred@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.0-alpha.1"
tokio = "0.2.0-alpha.6"
scraper = "0.11.0"
futures = "0.1.29"
