[tool.poetry]
name = "a-prophets-reach"
version = "0.1.0"
description = ""
authors = ["neallred <neallred@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.4"
requests = "^2.22"
beautifulsoup4 = "^4.8"
ipython = "^7.8"
unidecode = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
